<resources>
    <string name="app_name">Story Creators</string>
    <string name="title_dashboard">Create New Story</string>
    <string name="title_notifications">Drafts</string>
    <string name="button">Button</string>
    <string name="rank">0</string>
    <string name="this_is_where_you_type_your_story">This is where you type your story.</string>
    <string name="post_count">Post Count</string>
    <string name="submit">SUBMIT</string>
    <string name="create_your_new_story">Create Your New Story Here</string>
    <string name="this_is_where_you_ype_your_story">This is where you type your story...</string>
    <string name="save_story_for_later">Save Story for Later</string>
    <string name="save">Save</string>
    <string name="profile_pic">profile pic</string>
    <string name="user_s_rank_badge">User\'s rank badge</string>
    <string name="type_story_here">Type story here</string>
    <string name="title_horror_section">Horror Stories</string>
    <string name="title_fiction_section">Fiction Stories</string>
    <string name="user_bio">About Your Writing/Bio</string>
    <string-array name="spinner_array_entries">
        <item>GENRES</item>
        <item>Sci-Fi</item>
        <item>Fiction</item>
        <item>Action/Adventure</item>
        <item>Mystery/Thriller</item>
        <item>Horror</item>
    </string-array>

    <string name="user_chooses_profile_pic">This is where the user chooses an image for their profile.</string>
    <string name="user_enters_username">User Name</string>
    <string name="text_in_username_textview">Enter User Name Here</string>
    <string name="text_in_user_first_name_textview">First Name</string>
    <string name="text_in_user_last_name_textview">Last Name</string>
    <string name="already_a_member_question">New User? Sign up below.</string>
    <string name="member_sign_in_text_box">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_password_verification">Password Verification</string>
    <string name="new_member_email">Email</string>
    <string name="image_select_button">Select Image</string>
    <string name="image_save_button">Save Image</string>
    <string name="_1">1</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="horror">HORROR</string>
    <string name="fiction_button">FICTION</string>
    <string name="header_login_page">Story Creators</string>
    <string name="new_members_click_here">NEW MEMBERS CLICK HERE</string>
    <string name="pick_up_where_you_left_off">Pick Up Where You Left Off...</string>
    <string name="create_profile">Create Profile</string>
    <string name="sci_fi">SCI-FI</string>
    <string name="action_adventure">ACTION/ADVENTURE</string>
    <string name="title_of_your_story">Title of Your Story</string>
    <string name="add_to_this_story">ADD TO THIS STORY</string>
    <string name="textview">TextView</string>
    <string name="main_story">Main story...</string>
    <string name="title_here">Title here</string>
    <string name="delete">DELETE</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="do_you_want_to_delete_this_draft">Do you want to DELETE this draft?</string>
    <string name="add_to_the_story_here">Add to the story here....</string>
    <string name="find_your_next_story">Find Your Next Story</string>
    <string name="click_to_change_profile_pic">CLICK TO CHANGE PROFILE PIC</string>
    <string name="user_name_here">User Name Here</string>
    <string name="sign_in">SIGN IN</string>
    <string name="draft_goes_here">Draft goes here....</string>
    <string name="_1500">/1500</string>
    <string name="home">Home</string>
</resources>