<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_or_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    tools:context=".users.HomeLoginOrNewUser">


  <TextView
      android:id="@+id/app_logo"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:fontFamily="@font/resagokr"
      android:gravity="center"
      android:paddingStart="4dp"
      android:paddingEnd="4dp"
      android:shadowColor="@color/black"
      android:shadowDx="5"
      android:shadowDy="5"
      android:shadowRadius="4"
      android:text="@string/header_login_page"
      android:textAlignment="center"
      android:textColor="@color/vivid_sky_blue"
      android:textSize="56sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/already_a_member_question"
      android:layout_width="wrap_content"
      android:layout_height="24dp"
      android:layout_marginTop="16dp"
      android:fontFamily="serif"
      android:text="@string/already_a_member_question"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/existing_user_sign_in_button" />

  <EditText
      android:id="@+id/existing_user_name"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginTop="32dp"
      android:background="@color/light_gray"
      android:ems="10"
      android:fontFamily="serif"
      android:hint="@string/member_sign_in_text_box"
      android:inputType="textEmailAddress"
      android:paddingStart="4dp"
      android:paddingEnd="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/app_logo" />

  <EditText
      android:id="@+id/user_sign_in_password"
      android:layout_width="206dp"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:background="@color/light_gray"
      android:ems="10"
      android:fontFamily="serif"
      android:hint="@string/sign_in_password"
      android:inputType="textPassword"
      android:paddingStart="4dp"
      android:paddingEnd="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.493"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/existing_user_name" />

  <Button
      android:id="@+id/existing_user_sign_in_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:fontFamily="serif"
      android:text="@string/sign_in"
      android:textColor="@color/ivory"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/user_sign_in_password" />

  <Button
      android:id="@+id/new_member_sign_up_button"
      android:layout_width="wrap_content"
      android:layout_height="64dp"
      android:fontFamily="serif"
      android:text="@string/new_members_click_here"
      android:textColor="@color/ivory"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/already_a_member_question" />

  <TextView
      android:id="@+id/link_to_eula"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textAlignment="center"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      app:layout_constraintEnd_toEndOf="@+id/new_member_sign_up_button"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/new_member_sign_up_button"
      app:layout_constraintTop_toBottomOf="@+id/new_member_sign_up_button" />
</androidx.constraintlayout.widget.ConstraintLayout>