<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/delete_question_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_want_to_delete_this_draft"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textColor="@color/fire_opal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/do_not_delete_button"
        android:layout_width="136dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:text="@string/no"
        android:fontFamily="serif"
        android:textColor="@color/fire_opal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_question_textview" />

    <Button
        android:id="@+id/yes_delete_button"
        android:layout_width="136dp"
        android:layout_height="72dp"
        android:fontFamily="serif"
        android:text="@string/yes"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/do_not_delete_button"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/do_not_delete_button"
        app:layout_constraintTop_toBottomOf="@+id/do_not_delete_button" />

</androidx.constraintlayout.widget.ConstraintLayout>