<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:background="@color/ivory"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.create.CreateStoryFragment">


    <EditText
        android:id="@+id/title_of_story"
        android:layout_width="282dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:ellipsize="start"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:hint="@string/title_of_your_story"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/icon_blue"
        android:textColorHint="@color/icon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_story_creation_box"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="top|start"
        android:hint="@string/create_your_new_story"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="1500"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="24dp"
        android:textColor="@color/icon_blue"
        android:textColorHint="@color/icon_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_of_story" />

    <TextView
        android:id="@+id/word_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/word_counter_225"
        app:layout_constraintTop_toTopOf="@+id/word_counter_225" />

    <TextView
        android:id="@+id/word_counter_225"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/_1500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/new_story_creation_box"
        app:layout_constraintEnd_toEndOf="@+id/new_story_creation_box"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/new_story_creation_box" />


    <Button
        android:id="@+id/new_story_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:contentDescription="@string/submit"
        android:fontFamily="serif"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:text="SUBMIT STORY"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/save_to_drafts_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_story_creation_box" />

    <Button
        android:id="@+id/save_to_drafts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/save_story_for_later"
        android:fontFamily="serif"
        android:paddingStart="4dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="4dp"
        android:text="Save to Drafts"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/new_story_submit_button"
        app:layout_constraintTop_toTopOf="@+id/new_story_submit_button" />


</androidx.constraintlayout.widget.ConstraintLayout>