<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_view_num2_main"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/ivory"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameOnProfilePage"
        app:layout_constraintVertical_bias="0.181">


        <Button
            android:id="@+id/genreTabFiction"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:background="@drawable/fiction_button"
            android:fontFamily="@font/siamese"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/fiction_button"
            android:textAlignment="center"
            android:textColor="@color/icon_blue"
            android:textSize="24sp"
            android:translationZ="10dp"
            app:layout_constraintEnd_toStartOf="@+id/genreTabHorror"
            app:layout_constraintHorizontal_bias="0.612"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/genreTabHorror"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/horror_button"
            android:fontFamily="@font/double_feature"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/horror"
            android:textAlignment="center"
            android:textColor="@color/icon_blue"
            android:textSize="20sp"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genreTabFiction" />

        <Button
            android:id="@+id/genreTabActionAdventure"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/action_adventure_button"
            android:contentDescription="TODO"
            android:fontFamily="@font/tradewinds_regular"
            android:text="ACTION/&#10;ADVENTURE"
            android:textColor="@color/icon_blue"
            android:textSize="12sp"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="@id/genreTabFiction"
            app:layout_constraintStart_toStartOf="@id/genreTabFiction"
            app:layout_constraintTop_toBottomOf="@id/genreTabFiction" />

        <Button
            android:id="@+id/genreTabSciFi"
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:background="@drawable/scifi_button"
            android:fontFamily="@font/free"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/sci_fi"
            android:textColor="@color/icon_blue"
            android:textSize="24sp"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="@id/genreTabHorror"
            app:layout_constraintStart_toStartOf="@id/genreTabHorror"
            app:layout_constraintTop_toTopOf="@id/genreTabActionAdventure" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/userNameOnProfilePage"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/resagokr"
        android:gravity="center"
        android:maxLength="18"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <ImageButton
        android:id="@+id/profile_image"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/click_to_change_profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="serif"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>