<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <EditText
        android:id="@+id/titleTextBox"
        android:layout_width="248dp"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@color/light_gray"
        android:fontFamily="serif"
        android:hint="Title Goes Here..."
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/draft_delete_button"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/draft_content_text_view"
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_marginStart="12dp"
       android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@color/light_gray"
        android:fontFamily="serif"
        android:gravity="top|start"
        android:hint="Draft Goes Here..."
        android:maxLength="1500"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="24dp"
        android:scrollbars="vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/titleTextBox"
        app:layout_constraintTop_toBottomOf="@id/titleTextBox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/word_counter_drafts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/word_counter_drafts2"
        app:layout_constraintTop_toTopOf="@+id/word_counter_drafts2" />

    <TextView
        android:id="@+id/word_counter_drafts2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:text="@string/_1500"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/draft_content_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/draft_content_text_view"
        app:layout_constraintBottom_toBottomOf="@id/draft_content_text_view"        />


    <Button
        android:id="@+id/draft_content_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draft_content_text_view" />

    <Button
        android:id="@+id/draft_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fui_cancel"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toEndOf="@+id/draft_content_submit"
        app:layout_constraintTop_toTopOf="@+id/draft_content_submit" />

    <Button
        android:id="@+id/draft_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        android:fontFamily="serif"
        android:textColor="@color/fire_opal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.299"
        app:layout_constraintStart_toEndOf="@id/titleTextBox"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>